src/objects/Flight_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment</label>
        <referenceTo>Adjustment__c</referenceTo>
        <relationshipLabel>Flight Adjustments</relationshipLabel>
        <relationshipName>Flight_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Itinerary_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Itinerary Solution</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Flight Adjustments</relationshipLabel>
        <relationshipName>Flight_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peak Day/Blackout Day</label>
        <referenceTo>Peak_Days__c</referenceTo>
        <relationshipLabel>Flight Adjustments</relationshipLabel>
        <relationshipName>Flight_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Flight Adjustments</relationshipLabel>
        <relationshipName>Flight_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flight Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>